[package]
name = "chearmyp_lexer"
version = "0.6.0-dev"
authors = ["Kenneth Trecy Tobias <33564322+KennethTrecy@users.noreply.github.com>"]
edition = "2018"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"

[dependencies.abstract_chearmyp_source]
git = "https://github.com/KennethTrecy/abstract_chearmyp_source"
tag = "v0.5.2"

[dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.3.1"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_source]
git = "https://github.com/KennethTrecy/abstract_chearmyp_source"
tag = "v0.5.2"
features = ["slice_u8_source", "vec_source_collection", "slice_u8_comparable_to_str"]

[dev-dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.3.1"
features = ["assertable_token_kind", "vecdeque_token_queue"]

[dev-dependencies.chearmyp_token]
git = "https://github.com/KennethTrecy/chearmyp_token"
tag = "v0.6.2"
features = ["assertable_token"]
