[package]
name = "chearmyp_lexer"
version = "0.7.2-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"

[dependencies.abstract_chearmyp_source]
git = "https://github.com/KennethTrecy/abstract_chearmyp_source"
tag = "v0.6.0"

[dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.4.1"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"
features = ["range_boundary", "vec_boundary_collection"]

[dev-dependencies.abstract_chearmyp_source]
git = "https://github.com/KennethTrecy/abstract_chearmyp_source"
tag = "v0.6.0"
features = ["slice_u8_source", "vec_source_collection", "slice_u8_comparable_to_str"]

[dev-dependencies.abstract_chearmyp_token]
git = "https://github.com/KennethTrecy/abstract_chearmyp_token"
tag = "v0.4.1"
features = ["assertable_token_kind", "vecdeque_token_queue"]

[dev-dependencies.chearmyp_token]
git = "https://github.com/KennethTrecy/chearmyp_token"
tag = "v0.7.0"
features = ["assertable_token"]

[features]
default = []
no_std = [
	"abstract_chearmyp_source/no_std",
	"abstract_chearmyp_boundary/no_std",
	"abstract_chearmyp_token/no_std"
]
